working on notebooks 4 and 5

--- a/1 - What is HPC?.ipynb
+++ b/1 - What is HPC?.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I.What is High-Performance Computing?\n",
+    "## I. What is High-Performance Computing?\n",
     "\n",
     "Most people believe that High-Performance Computing (HPC) is defined by the architecture of the computer it runs on. In standard computing, one physical computer with one or more cores is used to carry out a task. All of these cores can access a pool of [Shared Memory](https://en.wikipedia.org/wiki/Shared_memory). Shared memory makes it trivial for two or more programs or parts of a single program to understand what other programs are doing. The following diagram represents a multicore single computer working in this fashion: ![multicore architecture diagram](https://i.pinimg.com/originals/22/31/f8/2231f856a5341e19526d089e1ffbe630.jpg \"Logo Title Text 1\")\n",
     "On the other hand, most high performance systems are clusters which consist of many separate multicore computers which are all connected over a network. In this configuration, the individual parts of a program running on separate physical machines are not easily able to communicate without connecting over the network. The following diagram represents a cluster of multicore computers working as a single cluster:  ![HPC cluster architecture diagram](http://cialisalto.com/wp-content/uploads/2018/01/excellent-hpc-cluster-architecture-on-and-contemporary-with-data-5.jpg \"Logo Title Text 1\")\n",
@@ -28,20 +28,20 @@
     "\n",
     "Monte carlo simulations are a class of computational algorithms that rely on repeated random sampling to obtain numerical results. We will discuss them in more detail in the parallel algorithms notebook. A very common monte carlo simulation uses some basic geometry to estimate the numerical value of pi. \n",
     "\n",
-    "For this, we imagine a circle of radius 1 inscribed in a square. Then, we choose random points in the square, and classify \"them by whether they are inside the circle or outside. This gives us an estimate of the areas of the square and the circle. Then, we take the ratio of one to the other and we have an estimation of pi. If this doesn't make any sense to you, don't worry. This image may help you understand a bit better: ![Monte Carlo Pi](https://ds055uzetaobb.cloudfront.net/image_optimizer/aabd5727316301f18f53bd4cbc63914fed0bcb2c.gif \"Logo Title Text 1\")\n",
+    "For this, we imagine a circle of radius 1 inscribed in a square. Then, we choose random points in the square, and classify them by whether they are inside the circle or outside. This gives us an estimate of the areas of the square and the circle. Then, we take the ratio of one to the other and we have an estimation of pi. If this doesn't make any sense to you, don't worry. This image may help you understand a bit better: ![Monte Carlo Pi](https://ds055uzetaobb.cloudfront.net/image_optimizer/aabd5727316301f18f53bd4cbc63914fed0bcb2c.gif \"Logo Title Text 1\")\n",
     "In the example below, we calculate pi by monte carlo simulation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esitmated value of Pi: 3.1252 \n"
+      "Esitmated value of Pi: 3.1344 \n"
      ]
     }
    ],
@@ -74,14 +74,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.Why is HPC important?\n",
+    "## II. Why is HPC important?\n",
     "High performance computing opens the door to large scale data analysis, computational science, and research computing. It is useful in a number of scenarios, including where software is too time-critical, too performance critical, or simply too big to run on a traditional system.\n",
     "\n",
     "Let's take a look at a few examples of scenarios where you would need an HPC System or an HPC System drastically changes your process.\n",
     "\n",
     "- **Scenario 1: Real-Time App:** Let's imagine you're an app developer working for The Weather Channel. You want to make an app that automatically detects where a person is, very specifically, and then uses your complex AccuWeather analysis to predict the likelihood of rain any time in the next seven days for that specific location. You would like your user to be able to get this data within seconds. There is no way you will be able to serve this user, let alone your millions of other users, this data with a single traditional computer. Having an HPC system available here is extremely important, in order to ensure your users get their weather in close to real time. ![Weather Models](http://aemstatic-ww1.azureedge.net/content/ias/en/articles/2012/08/honeywell-3d/_jcr_content/leftcolumn/article/headerimage.img.jpg/1345596242801.jpg \"\")\n",
     "- **Scenario 2: Designing a New Car or Plane:** You're a brand new aerospace engineer working for the Mercedes-Benz Formula One team. You have the off season (usually between December and May, or about five months) to design a new car which is better than all the cars that beat you last year. Traditionally, the way to do this is start with a small model, put it in a wind tunnel, evaluate it, and repeat this process. Then, you slowly scale up to bigger models and eventually start building concept cars. However, you only have five months, and each model may take a month to design and produce. You simply don't have time. Instead, you get started with your HPC system and start creating some [Computational Fluid Dynamics](https://en.wikipedia.org/wiki/Computational_fluid_dynamics) models which you can then use to create your new car with plenty of time to spare. The image below is the output of a CFD model. ![CFD model of car](https://upload.wikimedia.org/wikipedia/commons/f/fa/Verus_Engineering_Porsche_987.2_Ventus_2_Package.png \" \")\n",
-    "- **Scenario 3: Computational Climate Research:** "
+    "- **Scenario 3: Computational Climate Research:** Let's say you are a climate scientist. You want to simulate the climate of the entire world. You want to put in what the world was like in 1900, then press the play button, and simulate the entire 1900s in the entire world. Then, you want to compare what that looks like to what actually happened in the 1900s, and finally, if that's good enough, you want to keep playing through until 2100. This is simply too big a task to run on a normal computer; you will be waiting literally for years before your job exits.\n",
+    "![computational climate research](https://www.gfdl.noaa.gov/wp-content/uploads/pix/model_development/climate_modeling/climatemodel.png)"
    ]
   },
   {
@@ -202,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.Multiprocessing\n",
+    "## III. Multiprocessing\n",
     "One of the reasons this course is written in python is that python is an easy to use language which is commonly used for computational science and other HPC applications. Another reason that Python was chosen for this course is Python's powerful _multiprocessing_ library. _Multiprocessing_ allows users to open subprocesses within python in order to run many different snippets of python code all at once. In the following examples, we will use _multiprocessing_ to speed up our computations. It is true that Python has a GIL (global interpreter lock) which keeps it from natively running truly parallel programs, but with multiprocessing, we can get around this at the expense of heavier RAM overhead. The purpose of this course is not necessarily to write the fastest possible code, but more to demonstrate the techniques, methods, and tools for doing that in the future, and Python is an easily understandable and highly readable language. The following image is a description of how multiprocessing can help speed up Python programs: ![Multiprocessing Diagram](https://sebastianraschka.com/images/blog/2014/multiprocessing_intro/multiprocessing_scheme.png \"\")"
    ]
   },
@@ -244,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated 100 strings in 0.013104677200317383 seconds\n"
+      "Generated 100 strings in 0.006600379943847656 seconds\n"
      ]
     }
    ],
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
      "text": [
       "\n",
       "\n",
-      "Generated 100 strings in 0.0011026859283447266 seconds\n"
+      "Generated 100 strings in 0.0017147064208984375 seconds\n"
      ]
     }
    ],
@@ -327,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IV.Parallelism and HPC\n",
+    "## IV. Parallelism and HPC\n",
     "Parallelism is at the core of any HPC system. The way that HPC systems can be many hundreds of thousands of times faster than traditional systems is through massive parallelism. Some HPC systems have a total of many millions of cores, distributed among many systems (known as 'nodes'), as compared to the 4-8 of a standard modern desktop. This massive hardware parallelism, combined with some clever parallel algorithms, can lead to amazing processing power. "
    ]
   },
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
      "output_type": "stream",
      "text": [
       "You have 32 CPUs\n",
-      "Esitmated value of Pi: 3.1420584 \n"
+      "Esitmated value of Pi: 3.1416868 \n"
      ]
     }
    ],
@@ -411,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V.Power and Speed Comparison\n",
+    "## V. Power and Speed Comparison\n",
     "One definition of HPC has to do with scale. Some people believe that an HPC system is defined by how powerful it is rather than by how it is designed. Computational power has increased an incredible amount recently and HPC scale systems are now easily accessible to many people. The following graphic shows how powerful modern systems can be: ![hpc system power comparison](https://i.imgur.com/frXsxpz.png)\n",
     "\n",
     "As you might guess, parallel algorithms have the potential to be much faster than serial algorithms. In order to show this, we are going to use the two versions of monte carlo pi that we have designed in this notebook and time them against each other. "
@@ -427,16 +428,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining parallel monte carlo pi calculation \n",
+    "\n",
+    "import random\n",
+    "import multiprocessing\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "\n",
+    "#caculate the number of points in the unit circle\n",
+    "#out of n points\n",
+    "def monte_carlo_pi_part(n):\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(n):\n",
+    "        x=random.random()\n",
+    "        y=random.random()\n",
+    "        \n",
+    "        # if it is within the unit circle\n",
+    "        if x*x + y*y <= 1:\n",
+    "            count=count+1\n",
+    "        \n",
+    "    #return\n",
+    "    return count  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esitmated value of Pi: 3.1413176 \n",
-      "CPU times: user 47.9 ms, sys: 447 ms, total: 495 ms\n",
-      "Wall time: 789 ms\n"
+      "Esitmated value of Pi: 3.1420784 \n",
+      "CPU times: user 82.4 ms, sys: 622 ms, total: 704 ms\n",
+      "Wall time: 947 ms\n"
      ]
     }
    ],
@@ -465,16 +496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esitmated value of Pi: 3.1418208 \n",
-      "CPU times: user 6.35 s, sys: 0 ns, total: 6.35 s\n",
-      "Wall time: 6.16 s\n"
+      "Esitmated value of Pi: 3.1413032 \n",
+      "CPU times: user 7.45 s, sys: 276 ms, total: 7.73 s\n",
+      "Wall time: 7.23 s\n"
      ]
     }
    ],
@@ -532,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +592,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "192.168.0.1\n"
+      "192.168.0.1\n",
+      "192.168.0.101\n",
+      "192.168.0.102\n",
+      "192.168.0.103\n"
      ]
     }
    ],
