--- a/4 - Workflow Management Systems and Tools.ipynb
+++ b/4 - Workflow Management Systems and Tools.ipynb
@@ -214,113 +214,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your job 3489 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3490 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3491 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3492 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3493 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3494 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3495 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3496 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3497 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3498 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3499 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3500 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3501 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3502 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3503 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3504 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3505 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3506 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3507 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3508 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3509 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3510 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3511 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3512 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3513 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3514 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3515 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3516 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3517 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3518 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3519 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3520 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3521 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3522 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3523 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3524 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3525 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3526 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3527 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3528 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3529 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3530 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3531 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3532 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3533 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3534 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3535 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3536 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3537 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3538 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3539 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3540 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3541 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3542 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3543 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3544 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3545 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3546 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3547 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3548 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3549 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3550 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3551 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3552 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3553 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3554 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3555 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3556 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3557 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3558 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3559 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3560 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3561 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3562 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3563 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3564 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3565 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3566 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3567 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3568 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3569 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3570 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3571 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3572 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3573 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3574 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3575 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3576 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3577 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3578 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3579 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3580 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3581 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3582 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3583 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3584 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3585 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3586 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3587 (\"pi_SGE_script.sh\") has been submitted\n",
-      "Your job 3588 (\"pi_SGE_script.sh\") has been submitted\n"
+      "Your job 3596 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3597 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3598 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3599 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3600 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3601 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3602 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3603 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3604 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3605 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3606 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3607 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3608 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3609 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3610 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3611 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3612 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3613 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3614 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3615 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3616 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3617 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3618 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3619 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3620 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3621 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3622 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3623 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3624 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3625 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3626 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3627 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3628 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3629 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3630 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3631 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3632 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3633 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3634 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3635 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3636 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3637 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3638 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3639 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3640 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3641 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3642 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3643 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3644 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3645 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3646 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3647 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3648 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3649 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3650 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3651 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3652 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3653 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3654 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3655 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3656 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3657 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3658 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3659 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3660 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3661 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3662 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3663 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3664 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3665 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3666 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3667 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3668 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3669 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3670 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3671 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3672 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3673 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3674 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3675 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3676 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3677 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3678 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3679 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3680 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3681 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3682 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3683 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3684 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3685 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3686 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3687 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3688 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3689 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3690 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3691 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3692 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3693 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3694 (\"pi_SGE_script.sh\") has been submitted\n",
+      "Your job 3695 (\"pi_SGE_script.sh\") has been submitted\n"
      ]
     }
    ],
@@ -350,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esitmated value of Pi: 3.148708815672306 \n"
+      "Esitmated value of Pi: 3.144215530903328 \n"
      ]
     }
    ],
@@ -475,7 +475,7 @@
    "metadata": {},
    "source": [
     "## V. Resource Manager Systems and Resources\n",
-    "The cool thing about Parsl isn't just the Future. It's what the Future enables. The fact that Parsl Futures return immediately allows Parsl to compute _Data Dependencies._ When a future created by an App is passed as inputs to another, a data dependency is created. Parsl ensures that Apps are executed as their dependencies are resolved.\n",
+    "The cool thing about Parsl isn't just the Future, it's what the Future enables. The fact that Parsl Futures return immediately allows Parsl to compute _Data Dependencies._ When a future created by an App is passed as inputs to another, a data dependency is created. Parsl ensures that Apps are executed as their dependencies are resolved.\n",
     "\n",
     "Parsl is designed to enable the straightforward orchestration of asynchronous tasks into dataflow-based workflows in Python. Parsl manages the parallel execution of these tasks across computation resources when dependencies (e.g., input data dependencies) are met.\n",
     "\n",
@@ -611,17 +611,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average: 3.141787200000000002120259523508138954639434814453125000000000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the results\n",
     "print(\"Average: {0:.63f}\".format(avg_pi.result()))"
@@ -641,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this takes a long time. There is some overhead involved with Parsl, because it does things like mathematical calculations and automatic submissions of jobs to resource managers. We're also running this to an extreme amount of accuracy. Additionally, Parsl keeps resources running until the workflow exits, which doesn't happen until you tell it to on Jupyter, so re-runs of the workflow will be faster. Feel free to rerun the \"Call the workflow\" cell and the \"Print the results\" cell without any other ones. It'll be faster."
+    "Note that this takes a long time. There is some overhead involved with Parsl, because it does things like mathematical calculations and automatic submissions of jobs to resource managers. We're also running this to an extreme amount of accuracy. Additionally, Parsl keeps resources running until the workflow exits, which doesn't happen until you tell it to on Jupyter, so re-runs of the workflow will be faster. Feel free to rerun the \"Call the workflow\" cell and the \"Print the results\" cell without any other ones. It'll be faster. "
    ]
   },
   {
